--- a/Signup Page/index.html
+++ b/Signup Page/index.html
@@ -7,7 +7,19 @@
 </head>
 <body>
     <div>
-        <span><img href="/Signup Page/coding (1).png" alt="CodingLogo"></span>
+        <span><img src="coding (1).png" alt="CodingLogo" style="width: 250px;"></span>
+        <h3>Join Coders Now!</h3>
+    </div>
+    <div>
+        <span>
+            <input type="text" placeholder="FirstName" required>
+            <input type="text" placeholder="LastName" required>
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+           <span> <button>Sing Up</button></span>
+        </span>
+       <p>Already have an account?<a style="padding: 5px;" href="">Login</a></p>
+  
     </div>
 </body>
 </body>
