--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -3,141 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HtmlProjectCLA</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Landing Page with Css</title>
 </head>
 <body>
-    <svg width="53" height="60" viewBox="0 0 53 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M52.0254 14.9355L26.0127 0.0012207L0 14.9355V28.3419L6.01866 24.869V18.3912L26.0127 6.91258L46.0067 18.3912V20.9626L52.0254 17.489V14.9355Z" fill="#23155B"/>
-        <path d="M46.0067 41.3473L26.0127 52.8258L6.01864 41.3473V35.633L14.7957 30.568L22.0771 34.7709L28.6855 30.9566L21.4033 26.7544L14.7949 22.9395L8.18649 26.7544L6.02083 28.0044L0.00213623 31.478V44.8023L26.0148 59.7366L52.0275 44.8023V31.3959L46.0089 34.8695L46.0067 41.3473Z" fill="#23155B"/>
-        <path d="M46.0067 24.103L31.4072 32.5315L24.7988 36.3458L31.4072 40.1609L38.0156 36.3458L46.0045 31.7351L52.0232 28.2615V20.6301L46.0067 24.103Z" fill="#8053FF"/>
-        </svg>
-       <P>CodeCLA</P> 
-       <a href="">For Coders</a>
-       <a href="">For Developers</a>
-       <br>
-       <button>Join now</button>
-       <div>
-        <h3>The place for competitive Programmers</h3>
-        <p>
-            CodeCLA is where programmers in programming contests,solve algorithm and data structure challenges and become a part of an awesome community.
-             </p>
-             <button>Become a coder</button>
-             <button>Become a manager</button>
-       </div>
-       <div>
-        <h2>Practice to level-up</h2>
-       </div>
-       <div>
-        <P>1K</P>
-        <P>Problems for practice</P>
-        <P>Coders</P>
-        <P>10</P>
-        <P>Programming languages</P>
-        <P>130K</P>
-        <P>Submissions</P>
-       </div>
-       <div>
-        <h3>For Coders</h3>
-        <h3>What you will gain</h3>
-       </div>
-       <p>You are coder who wants to level up his skills in coding and problem solving?Here what we provide</p>
-       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect width="24" height="24" rx="12" fill="#00D386"/>
-        <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-        <p>Rich practice set of problems</p>
-        <p>Acces a rich library of practice problems, algorithms and data structures to enhance your skills</p>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect width="24" height="24" rx="12" fill="#00D386"/>
-            <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <p>Universal contests</p>
-            <p>Compete in regurarly scheduled contests against top talent from around the globe</p>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="24" height="24" rx="12" fill="#00D386"/>
-                <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            <p>Constand feedback</p>
-            <p>Recieve personalized insights and feedback to improve your problem solving abilities</p>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="24" height="24" rx="12" fill="#00D386"/>
-                <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <p>Sharing is caring</p>
-                <p>Connect with like mindend individuals, from teams and tackle challenges together</p>
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="24" height="24" rx="12" fill="#00D386"/>
-                    <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <p>Track your progess and climp the ranks on our leaderboard</p>
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="24" height="24" rx="12" fill="#00D386"/>
-                    <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                    <p>Detailed solututions for problems</p>
-                    <button>Join coders community</button>
-                <div>
-                    <h2>For managers</h2>
-                    <h2>Acces high-professional platform for coding challengs design</h2>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="24" height="24" rx="12" fill="#00D386"/>
-                        <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <p>Craft tailored coding challenge suited to your specific needs and objectives</p>
+    <header>
+        <!--Navigation-->
+      <nav>
+     <p><img src="/logo (1).svg" rel="logo.img">CodeCLA</p>
+     <div class="nav-links">
+     <a href="#">For Coders</a>
+     <a href="#">For Developers</a>
+     <br />
+     <button class="join-button">Join now</button>
+    </div>
+    </nav>
+          <!--Hero Section-->
+      <div class="hero-section">
+      <h3>The place for competitive Programmers</h3>
+      <p>
+        CodeCLA is where programmers in programming contests,solve algorithm and
+        data structure challenges and become a part of an awesome community.
+      </p>
+      <div class="hero-buttons">
+        <a href="#" class="leftbtn">Become a coder</a>
+        <a href="#" class="rightbtn">Become a manager</a>
+    </div>
+      </div>
+    </header>
+<!--Practice Section-->
+      <section class="practice-section">
+      <h2>Practice to level-up</h2>
+    <div class="practice-options">
+      <div class="practice-box1">1K<br>Problems for practice</div>
+      <div class="practice-box2">100+<br>Coders</div>
+      <div class="practice-box3">10<br>Programming languages</div>
+      <div class="practice-box4">130K<br>Submissions</div>
+    </div>
+    </section> 
+<!--Gain Section-->
+    <section class="gain-section">
+      <h3 id="for-coders">For Coders</h3>
+      <h3 id="FONT">What you will <span id="gain">gain</span></h3>
+      <p>You are coder who wants to level up his skills in coding and problem
+        solving?Here what we provide</p>
+      <div class="gain-options">
+        <div class="gain-card1">
+            <img src="/ok.svg" rel="ok.logo">
+            <span class="grey">Rich practice set of problems</span><br>Acces a rich library of practice problems, algorithms and data structures
+      to enhance your skills</div>
+    <div class="gain-card2">
+        <img src="/ok.svg" rel="ok.logo"><span class="grey">Universal contests </span><br>Compete in regurarly scheduled contests against top talent from around the
+        globe </div>
+    <div class="gain-card3">
+        <img src="/ok.svg" rel="ok.logo"><span class="grey">Constand feedback</span> <br>Recieve personalized insights and feedback to improve your problem solving
+        abilities</div> 
+    <div class="gain-card4">
+        <img src="/ok.svg" rel="ok.logo"><span class="grey">Sharing is caring</span><br>Connect with like mindend individuals, from teams and tackle challenges
+        together</div>
+    <div class="gain-card5">
+        <img src="/ok.svg" rel="ok.logo"><span class="grey">Track your progress and climp the ranks on our leaderboard</span></div>
+    <div class="gain-card6">
+        <img src="/ok.svg" rel="ok.logo"><span class="grey">Detailed solututions for problems</span></div>
+</div>
+<button class="btn-gain">Join coders community</button>
+</section>
+<!--Manager Section-->
 
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="24" height="24" rx="12" fill="#00D386"/>
-                            <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            <p>Desing challenges that align prefectly with your recruitment criteria</p>
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="24" height="24" rx="12" fill="#00D386"/>
-                                <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <p>Chose from a wide range of problem types including algorithmic data structures puzzles and more</p>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="#00D386"/>
-                                    <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                    <p>Ergonomic tools for challenges design</p>
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <rect width="24" height="24" rx="12" fill="#00D386"/>
-                                        <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                        </svg>
-                                      <p>collaborate with collegues or peers in creating and refinig coding challenges</p>   
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <rect width="24" height="24" rx="12" fill="#00D386"/>
-                                            <path d="M18 7L9.42857 17L6 13" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
-                               <p>Acces dedicated support from our team of experts</p>             
-                           <button>Join managers community</button>     
-                </div>                                                                                                        
-                <svg width="53" height="60" viewBox="0 0 53 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M52.0254 14.9355L26.0127 0.0012207L0 14.9355V28.3419L6.01866 24.869V18.3912L26.0127 6.91258L46.0067 18.3912V20.9626L52.0254 17.489V14.9355Z" fill="#23155B"/>
-                    <path d="M46.0067 41.3473L26.0127 52.8258L6.01864 41.3473V35.633L14.7957 30.568L22.0771 34.7709L28.6855 30.9566L21.4033 26.7544L14.7949 22.9395L8.18649 26.7544L6.02083 28.0044L0.00213623 31.478V44.8023L26.0148 59.7366L52.0275 44.8023V31.3959L46.0089 34.8695L46.0067 41.3473Z" fill="#23155B"/>
-                    <path d="M46.0067 24.103L31.4072 32.5315L24.7988 36.3458L31.4072 40.1609L38.0156 36.3458L46.0045 31.7351L52.0232 28.2615V20.6301L46.0067 24.103Z" fill="#8053FF"/>
-                    </svg>
-                 <h2>Brought to you by CLA</h2>
-                 <P>Join our Ultimate Hub for Competitive Programmers and reach growth and excellence in competitive programming.</P>
-                 <p>Coding challenges is made simple by our platform.Access a dashboard of hiof tools for high-quality challenge design</p>
-                 <div>
-                    <h3>Testimonials</h3>
-                    <p>This platform is an absolute game-changer for competitive programmers. The
-                        extensive range of problems and challenges offered here truly hones your skills
-                        and prepares you for any coding competition. With detailed solutions and an
-                        active community, it's the perfect environment to sharpen your coding
-                        prowess.</p>
-                        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Photo Woman">
-                        <h4>June Cha</h4>
-                        <P>Software Enginner</P>       
-                    </div>
-                    <h2>Contact us</h2>
-                    <label>Name<br><input type="text" placeholder="Your Name"></label>
-                    <br>
-<label>Email<br><input type="email" placeholder="Your email"></label>
-<br>
-<label>Message<br><input type="text" placeholder="Your Message"></label>
-<br>
-<button type="submit">Submit</button>
+<section class="manager-section">
+      <h1>For managers</h1>
+      <h2>Acces <span>high-professional</span> platform <br>for coding challengs design</h2>
+      <div class="manager-options">
+      <div class="manager-card7"><img src="/ok.svg" rel="ok.logo">Craft tailored coding challenge suited to your specific needs and
+        objectives</div>
+      <div class="manager-card8"><img src="/ok.svg" rel="ok.logo"> Desing challenges that align prefectly with your recruitment criteria</div>
+      <div class="manager-card9"><img src="/ok.svg" rel="ok.logo">Chose from a wide range of problem types including algorithmic data
+        structures puzzles and more</div>
+      <div class="manager-card10"><img src="/ok.svg" rel="ok.logo">Ergonomic tools for challenges design</div>
+      <div class="manager-card11"><img src="/ok.svg" rel="ok.logo">Collaborate with collegues or peers in creating and refinig coding
+        challenges</div>
+      <div class="manager-card12"><img src="/ok.svg" rel="ok.logo">Acces dedicated support from our team of experts</div>
+      <button class="btn-manager">Join managers community</button>
+    </div>
+<!--About Section-->
+    <section class="about-section">
+        <div id="right">
+        <img id="logo2" src="/logo (1).svg" rel="logo">
+    <h2>Brought to you by CLA</h2>
+    <p>Join our Ultimate Hub for Competitive Programmers and reach growth and
+      excellence in competitive programming.<span>Coding challenges is made simple by our platform.Access a dashboard of
+        hiof tools for high-quality challenge design</span></p>
+      </div>
+      <div id="left">
+        <img src="/team.svg" rel="team.photo" id="team.photo" >
+    </div>
+    </section>
+    <section>
+        <!--Testimonial Section-->
+    <div class="testimonial-section">
+      <h3>Testimonials</h3>
+      <p>This platform is an absolute game-changer for competitive programmers.
+        The extensive range of problems and challenges offered here truly hones
+        your skills and prepares you for any coding competition. With detailed
+        solutions and an active community, it's the perfect environment to
+        sharpen your coding prowess.</p>
+      <img src="https://randomuser.me/api/portraits/women/44.jpg"
+        alt="Photo Woman"/>
+      <h4>June Cha</h4>
+      <p>Software Enginner</p>
+    </div>
+</section>
+<!--Footer-->
+    <footer>
+    <div class="footer">
+    <h2>Contact us</h2>
+    <label>Name<br /><input type="text" placeholder="Your Name" /></label>
+    <br />
+    <label>Email<br /><input type="email" placeholder="Your email" /></label>
+    <br />
+    <label>Message<br /><input type="text" placeholder="Your Message" /></label>
+    <br />
+    <button type="submit">Submit</button>
+    </div>
+</footer>
+  </body>
+</html>
+
 </body>
 </html>
