--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -87,15 +87,15 @@
     </div>
 <!--About Section-->
     <section class="about-section">
-        <div id="right">
-        <img id="logo2" src="/logo (1).svg" rel="logo">
+        <div class="right-section">
+        <img src="/logo (1).svg" rel="logo">
     <h2>Brought to you by CLA</h2>
     <p>Join our Ultimate Hub for Competitive Programmers and reach growth and
       excellence in competitive programming.<span>Coding challenges is made simple by our platform.Access a dashboard of
         hiof tools for high-quality challenge design</span></p>
       </div>
-      <div id="left">
-        <img src="/team.svg" rel="team.photo" id="team.photo" >
+      <div class="left-section">
+        <img src="/team.svg" rel="team.photo" class="team-photo" >
     </div>
     </section>
     <section>
