--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page with Css</title>
+    <script src="form.js"></script>
 </head>
 <body>
     <header>
