--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page with Css</title>
-    <script src="form.js"></script>
 </head>
 <body>
     <header>
@@ -99,19 +98,17 @@
       <img src="/team.svg" rel="team.photo" class="team-photo" >
     </div>
     </div>
+     <!--Testimonial Section-->
     <section>
-        <!--Testimonial Section-->
     <div class="testimonial-section">
       <h3>Testimonials</h3>
-      <p>This platform is an absolute game-changer for competitive programmers.
-        The extensive range of problems and challenges offered here truly hones
-        your skills and prepares you for any coding competition. With detailed
-        solutions and an active community, it's the perfect environment to
-        sharpen your coding prowess.</p>
-      <img src="https://randomuser.me/api/portraits/women/44.jpg"
-        alt="Photo Woman"/>
-      <h4>June Cha</h4>
-      <p>Software Enginner</p>
+      <p id="testimonial-text"></p>
+      <img id="testimonial-img" src="" alt="Photo"/>
+      <h4 id="testimonial-name"></h4>
+      <p id="testimonial-position"></p>
+      <!-- Testimonial Buttons -->
+      <button id="prev-btn" class="dot">Previous</button>
+      <button id="next-btn" class="dot">Next</button>
     </div>
 </section>
 <!--Footer-->
@@ -127,8 +124,8 @@
     <button type="submit">Submit</button>
     </div>
 </footer>
+<script src="form.js"></script>
   </body>
 </html>
-
 </body>
 </html>
