--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -122,6 +122,7 @@
     <label>Message<br /><input type="text" placeholder="Your Message" /></label>
     <br />
     <button type="submit">Submit</button>
+    <p>© <span id="copyright-year"></span> CodeCLA</p>
     </div>
 </footer>
 <script src="form.js"></script>
