Deleted it by mistake

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -83,8 +83,8 @@
       <div class="manager-card11"><img src="/ok.svg" rel="ok.logo">Collaborate with collegues or peers in creating and refinig coding
         challenges</div>
       <div class="manager-card12"><img src="/ok.svg" rel="ok.logo">Acces dedicated support from our team of experts</div>
-      <button class="btn-manager">Join managers community</button>
     </div>
+    <button class="btn-manager">Join managers community</button></section>
 <!--About Section-->
     <div class="about-section">
      <div class="right-section">
