--- a/Signin Page/index.html
+++ b/Signin Page/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="left-section">
         <img
-          src="/coding.png"
+        src="/Pics/coding.png"
           alt="CodingLogo"
           class="coding-logo">
       </div>
