--- a/Signup Page/index.html
+++ b/Signup Page/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-section">
-        <img src="/coding.png" alt="CodingLogo" >
+        <img src="/Pics/coding.png" alt="CodingLogo" >
     </div>
     <div class="right-section">
         <h3>Join Coders Now!</h3>
