--- a/src/sing-up.html
+++ b/src/sing-up.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link href="./output.css" rel="stylesheet">
-</head>
-<body>
-    <div >
-        <div >
-        <img src="/Pics/coding.png" alt="CodingLogo" >
-    </div>
-    <div >
-        <h3 >Join Coders Now!</h3>
-        <form>
-            <input type="text" placeholder="First Name" required />
-            <input type="text" placeholder="Last Name" required />
-            <input type="email" placeholder="Email" required />
-            <input type="password" placeholder="Password" required />
-            <button type="submit" >Sign Up</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sing-up Page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="flex justify-center items-center h-screen bg-gray-100">
+    <div class="flex w-3/5 shadow-lg rounded-lg overflow-hidden">
+      <!-- Left Section -->
+      <div class="bg-indigo-900 flex justify-center items-center w-1/2 p-8">
+        <img src="/Pics/coding.png" alt="CodingLogo" class="w-64 h-auto" />
+      </div>
+
+      <!-- Right Section -->
+      <div
+        class="bg-white w-1/2 p-10 flex flex-col justify-center items-center"
+      >
+        <h3 class="text-indigo-600 mb-6 text-2xl">Join Coders Now!</h3>
+        <form class="w-full">
+          <input
+            type="text"
+            placeholder="First Name"
+            required
+            class="w-full p-3 mb-4 border rounded-md bg-indigo-900 text-white placeholder-white"
+          />
+          <input
+            type="text"
+            placeholder="Last Name"
+            required
+            class="w-full p-3 mb-4 border rounded-md bg-indigo-900 text-white placeholder-white"
+          />
+          <input
+            type="email"
+            placeholder="Email"
+            required
+            class="w-full p-3 mb-4 border rounded-md bg-indigo-900 text-white placeholder-white"
+          />
+          <input
+            type="password"
+            placeholder="Password"
+            required
+            class="w-full p-3 mb-4 border rounded-md bg-indigo-900 text-white placeholder-white"
+          />
+          <button
+            type="submit"
+            class="w-full p-3 bg-cyan-400 text-white rounded-md hover:bg-indigo-500 transition mt-4"
+          >
+            Sign Up
+          </button>
         </form>
-        <p>Already have an account? <a href="#" >Login</a></p>
-    </div> 
-</body>
-</body>
+        <p class="text-sm mt-4">
+          Already have an account?
+          <a href="#" class="text-indigo-600 font-bold hover:underline ml-2"
+            >Login</a
+          >
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
