--- a/src/LandingPage.html
+++ b/src/LandingPage.html
@@ -222,80 +222,130 @@
         Join managers community
       </button>
     </section>
-    <!--About Section-->
+    <!-- About Section -->
+    <section class="flex flex-col lg:flex-row bg-gray-100 py-12 items-center">
+      <!-- Left Section with Team Image -->
+      <div class="lg:w-1/2 w-full flex justify-center items-center px-4">
+        <img
+          src="/Pics/team.svg"
+          alt="Team Photo"
+          class="w-full rounded-r-3xl"
+        />
+      </div>
 
-    <div class="flex bg-gray-100 items-center">
-      <div class="max-w-1/2 p-8 flex flex-col items-center">
-        <img class="" src="/Pics/logo (1).svg" rel="logo" />
-        <h2 class="text-xl font-bold mb-4">Brought to you by CLA</h2>
-        <p class="text-gray-600">
+      <!-- Right Section with Content -->
+      <div
+        class="lg:w-1/2 w-full p-8 bg-white flex flex-col justify-center items-center text-center"
+      >
+        <img src="/Pics/logo (1).svg" alt="Logo" class="mb-6" />
+        <h2 class="text-3xl font-bold text-gray-900 mb-4">
+          Brought to you by CLA
+        </h2>
+        <p class="text-lg text-gray-600">
           Join our Ultimate Hub for Competitive Programmers and reach growth and
-          excellence in competitive programming.<span
-            >Coding challenges is made simple by our platform.Access a dashboard
-            of hiof tools for high-quality challenge design</span
+          excellence in competitive programming.
+          <span class="text-black"
+            >Coding challenges are made simple by our platform. Access a
+            dashboard of tools for high-quality challenge design.</span
           >
         </p>
       </div>
+    </section>
 
-      <div class="w-1/2 p-4">
-        <img class="rounded-lg w-10" src="/Pics/team.svg" rel="team.photo" />
-      </div>
-    </div>
-
-    <!--Testimonial Section-->
-    <section class="py-16 bg-gray-100 text-center">
-      <h3 class="text-2xl font-bold text-purple-500 mb-4">Testimonials</h3>
-      <p class="text-lg text-black" id="testimonial-text"></p>
-      <img class="w-24 h-24 rounded-full mx-auto mt-4" src="" alt="Photo" />
+    <!-- Testimonial Section -->
+    <section class="bg-gray-100 py-12 text-center">
+      <h3 class="text-2xl font-bold text-indigo-600 mb-4">Testimonials</h3>
+      <p id="testimonial-text" class="text-lg text-gray-800 mb-4"></p>
+      <img
+        id="testimonial-img"
+        src=""
+        alt="Testimonial Photo"
+        class="w-24 h-24 rounded-full mx-auto mb-4"
+      />
       <h4
         id="testimonial-name"
-        class="text-lg text-blue-950 font-bold mt-4"
+        class="text-xl font-bold text-gray-900 mb-2"
       ></h4>
-      <p id="testimonial-position" class="text-gray-600"></p>
-      <!-- Testimonial Buttons -->
-      <div class="flex justify-center space-x-4 mt-6">
-        <button id="prev-btn" class="bg-gray-300 py-2 px-4 rounded">
+      <p id="testimonial-position" class="text-md text-gray-600 mb-4"></p>
+
+      <!-- Testimonial Navigation Buttons -->
+      <div class="flex justify-center space-x-4 mt-4">
+        <button
+          id="prev-btn"
+          class="bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-500"
+        >
           Previous
         </button>
-        <button id="next-btn" class="bg-gray-300 py-2 px-4 rounded">
+        <button
+          id="next-btn"
+          class="bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-500"
+        >
           Next
         </button>
       </div>
     </section>
 
-    <!--Footer-->
-    <footer class="bg-purple-500 text-white rounded">
-      <div class="text-center">
-        <h2 class="text-white text-3xl mt-16">Contact us</h2>
-        <label
-          >Name<br /><input
-            class="w-full p-2 mt-2 rounded border border-gray-300 font-sans"
-            type="text"
-            placeholder="Your Name"
-        /></label>
-        <p class="error-message"></p>
-        <br />
-        <label
-          >Email<br /><input
-            class="w-full p-2 mt-2 rounded border border-gray-300 font-sans"
-            type="email"
-            placeholder="Your email"
-        /></label>
-        <p class="error-message"></p>
-        <br />
-        <label
-          >Message<br /><input
-            class="w-full p-2 mt-2 rounded border border-gray-300 font-sans"
-            type="text"
-            placeholder="Your Message"
-        /></label>
-        <p class="error-message"></p>
-        <br />
-        <button class="bg-white text-black mt-6 p-2 rounded" type="submit">
-          Submit
-        </button>
-        <p>© <span></span> CodeCLA</p>
+    <!-- Footer Section -->
+    <footer class="bg-indigo-900 text-white py-12">
+      <div class="container mx-auto text-center">
+        <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
+
+        <!-- Contact Form -->
+        <form class="space-y-4">
+          <!-- Name Field -->
+          <div>
+            <label for="name" class="block text-lg font-medium">Name</label>
+            <input
+              type="text"
+              id="name"
+              placeholder="Your Name"
+              class="w-full p-2 mt-2 text-black rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            />
+            <p id="name-error" class="text-red-500 text-sm mt-1"></p>
+          </div>
+
+          <!-- Email Field -->
+          <div>
+            <label for="email" class="block text-lg font-medium">Email</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="Your Email"
+              class="w-full p-2 mt-2 text-black rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            />
+            <p id="email-error" class="text-red-500 text-sm mt-1"></p>
+          </div>
+
+          <!-- Message Field -->
+          <div>
+            <label for="message" class="block text-lg font-medium"
+              >Message</label
+            >
+            <input
+              type="text"
+              id="message"
+              placeholder="Your Message"
+              class="w-full p-2 mt-2 text-black rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            />
+            <p id="message-error" class="text-red-500 text-sm mt-1"></p>
+          </div>
+
+          <!-- Submit Button -->
+          <button
+            type="submit"
+            id="submit-btn"
+            class="bg-indigo-600 text-white px-6 py-2 rounded-md hover:bg-indigo-500"
+          >
+            Submit
+          </button>
+        </form>
+
+        <!-- Footer Text -->
+        <p class="mt-8">© <span id="copyright-year"></span> CodeCLA</p>
       </div>
     </footer>
+
+    <script src="/Landing Page/form.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
